modifico a error password

--- a/proyecto-Clopix/src/views/Users/login.ejs
+++ b/proyecto-Clopix/src/views/Users/login.ejs
@@ -13,7 +13,7 @@
                 <div class="inputfield"></div>
                 <p>Usuario</p>
                 <input type="text" class="input" name="user" required>
-                <p id="errUser"></p>
+                <p id="errorUser"></p>
                 <% if(locals && locals.errors && locals.errors.user){ %>
                     <p><%= errors.user.msg %> </p>
                   <% } %>
@@ -24,7 +24,7 @@
                 <p>Contraseña</p>
                 <input type="password" class="input" name="password" required>
             </div>
-            <p id="errMail"></p>
+            <p id="errorPassword"></p>
             <% if(locals && locals.errors && locals.errors.mail){  %>
               <p><%= errors.mail.msg %> </p>
               <% } %> 
