--- a/proyecto-Clopix/src/views/Users/login.ejs
+++ b/proyecto-Clopix/src/views/Users/login.ejs
@@ -9,26 +9,29 @@
                 Inicio de sesión 
             </div>
 
-            <form name= "loginForm" id="loginForm" action="/user/loading" method="post" class="form">  
+            <form name= "loginForm" id="loginForm" action="/user/loading" method="post" class="form">
+
                 <div class="inputfield"></div>
-                <p>Usuario</p>
+                    <p> Usuario </p>
                 <input type="text" class="input" name="user" required>
-                <p id="errorUser"></p>
+                    <p id="errorUser"></p>
                 <% if(locals && locals.errors && locals.errors.user){ %>
-                    <p><%= errors.user.msg %> </p>
-                  <% } %>
+                    <p> <%= errors.user.msg %> </p>
+                <% } %>
                 </div>
 
 
-            <div class="inputfield">
-                <p>Contraseña</p>
+                <div class="inputfield">
+                    <p> Contraseña </p>
                 <input type="password" class="input" name="password" required>
-            </div>
-            <p id="errorPassword"></p>
-            <% if(locals && locals.errors && locals.errors.mail){  %>
-              <p><%= errors.mail.msg %> </p>
-              <% } %> 
+                </div>
+                    <p id="errorPassword"></p>
 
+                <div>      
+                <% if(locals && locals.errors && locals.errors.password){  %>
+                    <p> <%= errors.password.msg %> </p>
+                <% } %> 
+                </div> 
 
 
                 <button type="submit">Inicia Sesión</button>
