--- a/proyecto-Clopix/src/views/Users/login.ejs
+++ b/proyecto-Clopix/src/views/Users/login.ejs
@@ -33,11 +33,12 @@
                 <% } %> 
                 </div> 
 
+                <div class="inputfield">
+                    <button type="submit">Inicia Sesión</button>
+                </div>
 
-                <button type="submit">Inicia Sesión</button>
             </form>
         </div>
-        
         <%- include('../partials/footer')%>
-</body>
+    </body>
 </html>
