solucione un error del login.ejs colocando el script de register en el register.ejs antes deÃ finalizar el body

--- a/proyecto-Clopix/src/views/Users/register.ejs
+++ b/proyecto-Clopix/src/views/Users/register.ejs
@@ -98,7 +98,7 @@
           </form>
         </div>	
         <%- include('../partials/footer')%>
-
+        <script src="/scripts/register.js"> </script>    <!--tuve que agregar el script en el register.ejs y el error se fue 
     </body>
 </html>
   
