--- a/proyecto-Clopix/src/views/partials/footer.ejs
+++ b/proyecto-Clopix/src/views/partials/footer.ejs
@@ -10,6 +10,6 @@
         <a> <img src="/images/facebook.png" alt="Nuestro facebook" class="redesSociales"></a>
     </section>
  <!--Genero el script, lo llamo. Lo mismo se debe hacer con los demás archivos que se generen en SCRIPTS-->
-    <script src="/scripts/register.js"> </script>
+    <!--<script src="/scripts/register.js"> </script>-->
     <script src="/scripts/login.js"> </script>
 </footer>
