--- a/proyecto-Clopix/src/views/Users/register.ejs
+++ b/proyecto-Clopix/src/views/Users/register.ejs
@@ -98,7 +98,7 @@
           </form>
         </div>	
         <%- include('../partials/footer')%>
-        <script src="/scripts/register.js"> </script>    <!--tuve que agregar el script en el register.ejs y el error se fue 
+        <script src="/scripts/register.js"> </script>    <!--tuve que agregar el script en el register.ejs por un error en login.ejs
     </body>
 </html>
   
