--- a/proyecto-Clopix/src/views/index.ejs
+++ b/proyecto-Clopix/src/views/index.ejs
@@ -3,14 +3,8 @@
 <%- include('./partials/head') %> 
     <body id="bodyHome">
         <%- include('./partials/header')%>
-
-
-
-      
-
-
                    <!--PRINCIPIO DEL MAIN-->
-                   <main>
+                <main>
                     <section class="slider"><!-- prueba del slider-->
 
                             <ul class="slider">
@@ -18,92 +12,45 @@
                                 <li id="slide2"><img src="/images/slide2.jpeg" alt=""></li>
                                 <li id="slide3"><img src="/images/slide3.jpeg" alt=""></li>
                             </ul>
-                       
-                     
-            
-                   
-                    
-              
                     </section><!-- fin prueba del slider-->
-                    
-               
-                    <section>
-                        <h3>Basado en tu ultima visita</h3>
-                        
-             
+                    <h3>Basado en tu ultima visita</h3>
+                    <section class="Ofertas">
                         <article>
                             <img src="/images/KyotoPastel-BomberJacketFront_180x.png" alt="" width="360">
-            
                             <div class="caja-detalle">
-            
-                                <i class="fas fa-truck"></i>
-            
-            
-                                <div class="precio-descuento">
-            
-                                    <p class="precio">$455</p>
-            
-                                    <p class="descuento">CHAQUETA BOMBER 40% off</p>
-            
-            
-                                </div>
-                             
-                          
-                            </div>
-            
-                        </article>
-                        
-            
-                        
-            
-            
-                        <article>
-                            <img src="/images/7F_180x.png" alt="" width="360">
-            
-                            <div class="caja-detalle">
-            
                                 
-                                <i class="fas fa-truck"></i>
-            
-            
                                 <div class="precio-descuento">
-            
-                                    <p class="precio">$150</p>
-            
-                                    <p class="descuento">VICE CAMISA HAWAIANA 20% off</p>
-            
+                                    <p class="precio">$455</p>
+                                    <p class="descuento">CHAQUETA BOMBER 40% off</p>
                                 </div>
-            
-                           
-            
+                                <i class="fas fa-truck"></i>
                             </div>
                         </article>
-            
-            
+
                         <article>
-                            <img src="/images/NewChallengerall_over_print_hoodieFRONT_180x.png" alt="" width="360">
-                            
+                            <img src="/images/7F_180x.png" alt="" >
                             <div class="caja-detalle">
+                                <div class="precio-descuento">
+                                    <p class="precio">$150</p>
+                                    <p class="descuento">VICE CAMISA HAWAIANA 20% off</p>
+                                </div>
                                 <i class="fas fa-truck"></i>
-            
+                            </div>
+                        </article>
+                        <article>
+                            <img src="/images/NewChallengerall_over_print_hoodieFRONT_180x.png" alt="">
+                            <div class="caja-detalle">
                                 <div class="precio-descuento">
                                     <p class="precio">$230</p>
-            
                                     <p class="descuento">SUDADERA NEW CHALLENGER 20% off </p>
-                            
-            
                                 </div>
-            
-                            
-            
+                                <i class="fas fa-truck"></i>
                             </div>
                         </article>
-            
-        
-                </main>
-    
+                    </section>
+            </main>
                 <!--FIN DEL MAIN-->
                 <%- include('./partials/footer')%>
-
+        
     </body>
 </html>
