--- a/proyecto-Clopix/public/css/styless.css
+++ b/proyecto-Clopix/public/css/styless.css
@@ -9,12 +9,10 @@ img{
 /*header*/
 header{
     background-color: white;
-    font-size: 100%;
+    font-size: 90%;
     width: 100%;
 }
-header img{
-    width: 100%;
-}
+
 header nav ul li a{
     width: 15%;
     color: #99DDCC;
@@ -25,6 +23,7 @@ header nav ul li{
     display: flex;
     width: 25%;
     align-content: center;
+    font-size: 75%;
     justify-content:space-between;
 }
 header nav ul{
@@ -48,6 +47,8 @@ header nav a {
     border-top: 5px solid #00324b;
     flex-wrap: wrap;
     position: relative;
+    color: #99DDCC;
+    box-shadow: black;
 }
 
 /*header*/
@@ -219,7 +220,7 @@ body#bodyCatalogo{
 body#bodyCatalogo section article{
     display: flex;
     flex-direction:column;
-    height: 75vh;
+    height: 55vh;
     margin: auto;
     margin-bottom: 5%;
     margin-top: 2%;
@@ -242,7 +243,7 @@ body#bodyCatalogo section.Productos{
 
 #bodyCatalogo section article a img{
   width: 100%;
-  height: 75%;
+  height: 100%;
 }
 #bodyCatalogo section article section.datos{/* Descripcion*/
   width: 100%;
@@ -261,9 +262,9 @@ body#bodyCatalogo section.Productos{
   }
   body#bodyHome{
       width: 100%;
-      max-width: 100vh;
       background: linear-gradient(207deg, rgba(241,104,193,1) 0%, rgba(189,94,213,1) 62%);
-    }
+      padding: 2%;
+  }
   /*CSS del slider*/
   #bodyHome section.slider ul {
     display: flex;
@@ -273,7 +274,7 @@ body#bodyCatalogo section.Productos{
   
   #bodyHome section.slider ul li {
     list-style: none;
-    width: 90%;
+    width: 100%;
     margin: 1%;
   }
 
@@ -284,7 +285,8 @@ body#bodyCatalogo section.Productos{
   }
 
   #bodyHome main section.slider {
-    width: 95%;
+    width: 100%;
+    overflow: hidden;
   }
   #bodyHome main section.Ofertas{
      display: flex;
@@ -401,54 +403,8 @@ body#bodyRegister{
   width: 100%;
   background-image: url("https://cdn.shopify.com/s/files/1/1171/8456/files/71530421_729406894232388_5302369846022799223_n_1024x1024.jpg?v=1636497317");
   background-size: cover;
-  
+  padding: 5%;
 }
-#bodyRegister nav .menu{ 
-  width: 100%;
-  position: absolute;
-  top: auto;
-  right: 0;
-  bottom: 1px;
-  left: 0;
-  background: #f1f2f3;
-  /**/
-}
-
-#bodyRegister nav ul {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-}
-
-#bodyRegister nav ul li {
-  display: flex;
-  flex-grow: 1;
-  flex-wrap: wrap;
-  box-sizing: border-box;
-}
-
-#bodyRegister nav a{
-
-  text-decoration: none;
-  font-weight: bold;
-  color: #00324b;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  line-height: 1.8;
-  flex-grow: 1;
-  text-align: center;
-  border-top: 5px solid #00324b;
-  border-right: 1px solid #00324b;
-  flex-wrap: wrap;
-  position: relative;
-}
-
-#bodyRegister nav li:last-child a {
-  border-right: 0;
-}
-
-
-
-
 
 /*FORMULARIO*/
 
@@ -473,23 +429,24 @@ body#bodyRegister{
 
 #bodyRegister  .wrapper .form{
   width: 100%;
+  color: black;
 }
 
-#bodyRegister .wrapper .form .inputfield{          /*comente el display: flex para que baje "el nombre tiene..." */
+#bodyRegister .wrapper .form .inputfield{        
   margin-bottom: 15px;
-  /*display: flex;*/
   align-items: center;
 }
 
+
+
 #bodyRegister .wrapper .form .inputfield label{
    width: 200px;
-   color: #757575;
    margin-right: 10px;
-  font-size: 14px;
+   font-size: 14px;
 }
 
-#bodyRegister .wrapper .form .inputfield .input,
-#bodyRegister .wrapper .form .inputfield .textarea{
+#bodyRegister .wrapper .form .inputfield .input
+{
   width: 100%;
   outline: none;
   border: 1px solid #d5dbd9;
@@ -497,28 +454,6 @@ body#bodyRegister{
   padding: 8px 10px;
   border-radius: 3px;
   transition: all 0.3s ease;
-}
-
-#bodyRegister .wrapper .form .inputfield .textarea{
-  width: 100%;
-  height: 125px;
-  resize: none;
-}
-
-#bodyRegister .wrapper .form .inputfield .custom_select{
-  position: relative;
-  width: 100%;
-  height: 37px;
-}
-
-#bodyRegister .wrapper .form .inputfield .custom_select:before{
-  content: "";
-  position: absolute;
-  top: 12px;
-  right: 10px;
-  border: 8px solid;
-  border-color: #d5dbd9 transparent transparent transparent;
-  pointer-events: none;
 }
 
 #bodyRegister .wrapper .form .inputfield .custom_select select{
@@ -535,69 +470,18 @@ body#bodyRegister{
   border-radius: 3px;
 }
 
-
-#bodyRegister .wrapper .form .inputfield .input:focus,
-#bodyRegister .wrapper .form .inputfield .textarea:focus,
-#bodyRegister .wrapper .form .inputfield .custom_select select:focus{
-  border: 1px solid plum;
-}
-
-                                        /*empiezo el modifico del estilo de validaciones en register*/
-
-#bodyRegister .wrapper .form .inputfield p{
-   font-size: 14px;
-   color: red;
-   padding-top: 10px;
-}
-
 #bodyRegister .wrapper .form h1{
   font-size: 14px;
   color: gray;
   display:flex;
   justify-content: space-around;
 }
-                                         /*termino el modifico del estilo de validaciones en register*/
+/*termino el modifico del estilo de validaciones en register*/
 
-#bodyRegister .wrapper .form .inputfield .check{
-  width: 15px;
-  height: 15px;
-  position: relative;
-  display: block;
-  cursor: pointer;
-}
-#bodyRegister .wrapper .form .inputfield .check input[type="checkbox"]{
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 0;
-}
-#bodyRegister .wrapper .form .inputfield .check .checkmark{
-  width: 15px;
-  height: 15px;
-  border: 1px solid plum;
-  display: block;
-  /*position: relative;                                           comente porque no hace nada
-                                 me falta poisicionarlo al lado de "Acepto terminos y condiciones"*/    
-
-}
-#bodyRegister .wrapper .form .inputfield .check .checkmark:before{
-  content: "";
-  position: absolute;
-  top: 1px;
-  left: 2px;
-  width: 5px;
-  height: 2px;
-  border: 2px solid;
-  border-color: transparent transparent #fff #fff;
-  transform: rotate(-45deg);
-  display: none;
-}
-#bodyRegister .wrapper .form .inputfield .check input[type="checkbox"]:checked ~ .checkmark{
-  background:plum;
-}
-
-#bodyRegister .wrapper .form .inputfield .check input[type="checkbox"]:checked ~ .checkmark:before{
-  display: block;
+#bodyRegister form div.termsAndConditions{
+  display: flex;
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
 
 #bodyRegister button{
@@ -613,7 +497,7 @@ body#bodyRegister{
 }
 
 #bodyRegister .wrapper .form .inputfield .btn:hover{
-  background: black;
+  background: #99DDCC;
 }
 
 #bodyRegister .wrapper .form .inputfield:last-child{
@@ -624,9 +508,6 @@ body#bodyRegister{
   align-content: center;
 }
 /*fin register*/
-
-/*LOGIN USUARIO/*
-
 
 
 
@@ -788,7 +669,6 @@ body#MenuAdmin div ul li{
   }
   body#bodyCatalogo section article{
     width: 44%;
-    height: 40vh;
     margin: 3%;
   }
  
