cambie la letra de los productos

--- a/proyecto-Clopix/src/views/index.ejs
+++ b/proyecto-Clopix/src/views/index.ejs
@@ -40,11 +40,11 @@
                         <article>
                             <img src="/images/NewChallengerall_over_print_hoodieFRONT_180x.png" alt="">
                             <div class="caja-detalle">
-                                <div class="precio-descuento">
-                                    <p class="precio">$230</p>
-                                    <p class="descuento">SUDADERA NEW CHALLENGER 20% off </p>
+                               <!--<div class="precio-descuento"> -->
+                                 <p class="precio">$23990 ARS </p> 
+                                    <p class="descuento">SUDADERA NEW CHALLENGER </p>
                                 </div>
-                                <i class="fas fa-truck"></i>
+                              <!--<i class="fas fa-truck"></i>-->
                             </div>
                         </article>
                     </section>
