--- a/proyecto-Clopix/public/css/styless.css
+++ b/proyecto-Clopix/public/css/styless.css
@@ -294,12 +294,12 @@ body#bodyCatalogo section.Productos{
      flex-wrap: wrap;
      text-align: center;
      width: 100%;
+     
   }
-
   #bodyHome .caja-detalle{
     display: flex;
 
-   /* border: 3px white solid;*/
+  /* border: 3px white solid;*/
     margin: auto;
     text-align: center;
     /*background: linear-gradient(207deg, rgba(241,104,193,1) 0%, rgba(242,223,231,1) 1%); */
@@ -331,6 +331,7 @@ body#bodyCatalogo section.Productos{
   #bodyHome main section.Ofertas img{
     width: 100%;
     height: 100%;
+    border: 3px white solid;
   }
   #bodyHome main section.Ofertas article{
     width: 90%;
