--- a/proyecto-Clopix/src/views/index.ejs
+++ b/proyecto-Clopix/src/views/index.ejs
@@ -13,28 +13,28 @@
                                 <li id="slide3"><img src="/images/slide3.jpeg" alt=""></li>
                             </ul>
                     </section><!-- fin prueba del slider-->
-                    <h3>Basado en tu ultima visita</h3>
+               <!--<h3>Basado en tu ultima visita</h3> -->
                     <section class="Ofertas">
                         <article>
                             <img src="/images/KyotoPastel-BomberJacketFront_180x.png" alt="" width="360">
                             <div class="caja-detalle">
                                 
-                                <div class="precio-descuento">
-                                    <p class="precio">$455</p>
-                                    <p class="descuento">CHAQUETA BOMBER 40% off</p>
+                              <!-- <div class="precio-descuento"> -->
+                                 <p class="precio">$4550 ARS </p> 
+                                    <p class="descuento">CHAQUETA BOMBER </p>
                                 </div>
-                                <i class="fas fa-truck"></i>
+                         <!--   <i class="fas fa-truck"></i> -->
                             </div>
                         </article>
 
                         <article>
                             <img src="/images/7F_180x.png" alt="" >
                             <div class="caja-detalle">
-                                <div class="precio-descuento">
-                                    <p class="precio">$150</p>
-                                    <p class="descuento">VICE CAMISA HAWAIANA 20% off</p>
+                             <!-- <div class="precio-descuento"> -->
+                                    <p class="precio">$1500 ARS </p>
+                                    <p class="descuento">VICE CAMISA HAWAIANA </p>
                                 </div>
-                                <i class="fas fa-truck"></i>
+                             <!--   <i class="fas fa-truck"></i> -->
                             </div>
                         </article>
                         <article>
