--- a/proyecto-Clopix/public/css/styless.css
+++ b/proyecto-Clopix/public/css/styless.css
@@ -309,6 +309,7 @@ body#bodyCatalogo section.Productos{
     letter-spacing: 0.8px;
     line-height: 18px;
     overflow-x: hidden;
+    text-align: center;
   }
 
   #bodyHome .descuento{ 
@@ -321,6 +322,8 @@ body#bodyCatalogo section.Productos{
       letter-spacing: 0.8px;
       line-height: 18px;
       overflow-x: hidden;
+      text-align: center;
+
     }
 
 
@@ -608,26 +611,34 @@ body#AltaProducto main.main{
 
 /*footer*/
 footer {
-  display:  flex;
-  flex-direction: column;
-  margin: 10px;
+ /* display:  flex;*/
+ /* flex-direction: column;
+  margin: 10px;*/
+  margin-top: 55px;
   border-top: 1px solid black;
-  color: #99DDCC;
-  width: 80%;
-  height: 10%;
-  font-size: 100%;
-  text-align: center;
-  margin-bottom: 5%;
-  flex-grow: 1;
+  color: #c772db;
+  width: 100%;
+  /*height: 10%;*/
+  font-size: 30px;
+ /* margin-bottom: 5%;
+  flex-grow: 1;*/
   line-height: 1.8;
-  background-color: black;
+  background: url(../images/FONDO\ NEGRO.jpg) repeat-x top;
+  padding: 24px;
+  box-sizing: border-box;
+  padding-left: 22px;
+  padding-right: 22px;
+  float: left;
+  text-align: center;
 }
 
 footer a img{
-    width: 8%;
+   width: 5%;
+   text-align: center;
 }
 footer a{
-  color: #99DDCC;
+  color: #c772db;
+  font-size: 20px;
 }
 footer section ul li {
   display: flex;
@@ -732,7 +743,7 @@ body#MenuAdmin div ul li{
   }
 
   footer{
-    width: 40%;
+    width: 100%;
     font-size: 100%;
   }
   #bodyLogin .wrapper form{
