--- a/proyecto-Clopix/src/views/index.ejs
+++ b/proyecto-Clopix/src/views/index.ejs
@@ -19,7 +19,7 @@
                             <img src="/images/KyotoPastel-BomberJacketFront_180x.png" alt="" width="360">
                             <div class="caja-detalle">
                                 
-                              <!-- <div class="precio-descuento"> -->
+                              <div class="precio-descuento"> 
                                     <p class="descuento">CHAQUETA BOMBER </p>
                                     <p class="precio">$4550 ARS </p> 
                                 </div>
