alinee el texto, falta el poducto

--- a/proyecto-Clopix/src/views/index.ejs
+++ b/proyecto-Clopix/src/views/index.ejs
@@ -16,33 +16,36 @@
                <!--<h3>Basado en tu ultima visita</h3> -->
                     <section class="Ofertas">
                         <article>
-                            <img src="/images/KyotoPastel-BomberJacketFront_180x.png" alt="" width="360">
-                            <div class="caja-detalle">
+                            <div class="imagenProducto">
+                              <img src="/images/KyotoPastel-BomberJacketFront_180x.png" alt="" width="360">
+                            </div>
+
                                 
-                              <div class="precio-descuento"> 
-                                    <p class="descuento">CHAQUETA BOMBER </p>
-                                    <p class="precio">$4550 ARS </p> 
+                      <div class="nombre-precio"> 
+                                    <p class="nombreProducto-Precio">CHAQUETA BOMBER $4550 ARS </p>
                                 </div>
                          <!--   <i class="fas fa-truck"></i> -->
                             </div>
                         </article>
 
                         <article>
-                            <img src="/images/7F_180x.png" alt="" >
-                            <div class="caja-detalle">
-                             <!-- <div class="precio-descuento"> -->
-                                    <p class="descuento">VICE CAMISA HAWAIANA </p>
-                                    <p class="precio">$1500 ARS </p>
+                            <div class="imagenProducto">
+                               <img src="/images/7F_180x.png" alt="" >
+                            </div>
+
+                              <div class="nombre-precio"> 
+                                    <p class="nombreProducto-Precio">VICE CAMISA HAWAIANA  $1500 ARS</p>
                                 </div>
                              <!--   <i class="fas fa-truck"></i> -->
                             </div>
                         </article>
                         <article>
-                            <img src="/images/NewChallengerall_over_print_hoodieFRONT_180x.png" alt="">
-                            <div class="caja-detalle">
-                               <!--<div class="precio-descuento"> -->
-                                    <p class="descuento">SUDADERA NEW CHALLENGER </p>
-                                    <p class="precio">$23990 ARS </p> 
+                            <div class="imagenProducto">
+                              <img src="/images/NewChallengerall_over_print_hoodieFRONT_180x.png" alt="">
+                            </div>
+
+                               <div class="nombre-precio"> 
+                                    <p class="nombreProducto-Precio">SUDADERA NEW CHALLENGER $23990 ARS </p>
                                 </div>
                               <!--<i class="fas fa-truck"></i>-->
                             </div>
