--- a/proyecto-Clopix/public/css/styless.css
+++ b/proyecto-Clopix/public/css/styless.css
@@ -4,7 +4,16 @@
     margin: 0px;
 }
 img{
-    width: 100%;
+  max-width: 100%;
+    min-height: 100%;
+    padding: 5px;
+}
+.imagenProducto {
+  height: 200px;
+  width: 200px;
+  object-fit: cover;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 /*header*/
 header{
@@ -16,8 +25,7 @@ header{
 header nav ul li a{
     width: 15%;
     color: #99DDCC;
-    margin: 10px;
-   
+    margin: 10px;  
 }
 header nav ul li{
     display: flex;
@@ -261,7 +269,6 @@ body#bodyCatalogo section.Productos{
     width: 95%;
   }
   body#bodyHome{
-      width: 100%;
       /*background: linear-gradient(207deg, rgba(241,104,193,1) 0%, rgba(189,94,213,1) 62%);*/
       background-color: white;
       padding: 2%;
@@ -281,51 +288,40 @@ body#bodyCatalogo section.Productos{
 
   #bodyHome main{
     margin: auto;
-    width: 100%;
     text-align: center;
   }
 
   #bodyHome main section.slider {
-    width: 100%;
     overflow: hidden;
   }
-  #bodyHome main section.Ofertas{
-     display: flex;
-     flex-direction: row;
-     flex-wrap: wrap;
-     text-align: center;
-     width: 100%;
-     
-  }
-  #bodyHome .precio{ 
-  /* border: 3px white solid;*/
-    margin: auto;
-    /*background: linear-gradient(207deg, rgba(241,104,193,1) 0%, rgba(242,223,231,1) 1%); */
-    /*font-family:'Bangers', cursive;*/
-    font-size: 15px;
-    display: grid;
-    vertical-align: baseline;
-    font-stretch: condensed;
-    letter-spacing: 0.8px;
-    line-height: 18px;
-    overflow-x: hidden;
-    text-align: center;
+
+ #bodyHome main section.Ofertas {
+     display: flex;                        
   }
 
-  #bodyHome .descuento{ 
+  #bodyHome .nombreProducto-Precio{ 
       margin: auto; 
-      /*font-family:'Bangers', cursive;*/
-      font-size: 15px;
+      font-family: 'Open Sans', sans-serif;
       display: grid;
+      vertical-align: baseline;
+      font-stretch: condensed;
+      line-height: 50px;
       vertical-align: baseline;
       font-stretch: condensed;
       letter-spacing: 0.8px;
       line-height: 18px;
       overflow-x: hidden;
       text-align: center;
-
+      font-size: 15px;
+      display: grid;  
     }
 
+p.nombre-precio{ 
+    justify-content: center;
+  }
+  #bodyHome .caja-detalle{ 
+    text-align: center;
+  }
 
   #bodyHome .caja-detalle div{
     width: 90%;
@@ -344,8 +340,8 @@ body#bodyCatalogo section.Productos{
     transform: rotate(-90deg)
   }
   #bodyHome main section.Ofertas img{
-    width: 400px;
-    height: 400px;
+    width: 100%;
+    height: 100%;
     /*border: 3px black solid;*/
     background-color: #F9F5ED;
   }
@@ -619,7 +615,6 @@ footer {
   color: #c772db;
   width: 100%;
   /*height: 10%;*/
-  font-size: 30px;
  /* margin-bottom: 5%;
   flex-grow: 1;*/
   line-height: 1.8;
@@ -637,15 +632,13 @@ footer a img{
    text-align: center;
 }
 footer a{
-  color: #c772db;
+  color:#c772db;
   font-size: 20px;
 }
 footer section ul li {
   display: flex;
   justify-content: center; 
 }
-
-
 
 
 /*footer*/
@@ -764,6 +757,3 @@ body#MenuAdmin div ul li{
   50%{margin-left: -100%;} 
   100%{margin-left: -200%;}  
 }
-
-
-
