--- a/proyecto-Clopix/public/css/styless.css
+++ b/proyecto-Clopix/public/css/styless.css
@@ -9,8 +9,8 @@ img{
     padding: 5px;
 }
 .imagenProducto {
-  height: 200px;
-  width: 200px;
+  /*height: 200px;
+  width: 200px;*/
   object-fit: cover;
   padding-left: 20px;
   padding-right: 20px;
