--- a/proyecto-Clopix/public/css/styless.css
+++ b/proyecto-Clopix/public/css/styless.css
@@ -120,20 +120,28 @@ body#bodyCarritoCompras div.main section.special button{
 
 
 /*estilos unproducto*/
+
+#bodyUnProducto article{
+  width: 100%;
+  margin: auto;
+}
 #bodyUnProducto article section {
+    margin-top: 2%;
     display: flex;
-    margin-top:35px;
-    margin-bottom: 0px;
     border: 1px solid rgb(245, 207, 222);
-    align-content: center;
-    justify-content: center;
     flex-direction: column;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
-    font-weight: 500;
+    font-size: 100%;
     text-shadow: 1px 1px 6px #fff;
     padding: 10px;
     color: white;
+}
+body#bodyUnProducto form section.img{
+   height: 55vh;
+   margin-bottom: 2%;
+}
+body#bodyUnProducto form section.info{
+  height: 45vh;
 }
 body#bodyUnProducto{
     width: 100%;
@@ -174,14 +182,9 @@ body#bodyModificarProducto{
     align-items: center;
     justify-items: center;
 }
-#bodyModificarProducto .wrapper {
-    margin-top: 20px;
-    background: #fff;
-    padding: 30px;
-    margin: auto;
-}
 
-#bodyModificarProducto .wrapper .title{ 
+
+#bodyModificarProducto form .title{ 
     font-size: 24px;
     font-weight: 700;
     color: plum;
@@ -194,12 +197,12 @@ body#bodyModificarProducto{
     background-color: white;
 }
 
-#bodyModificarProducto .wrapper .form .inputfield label { 
+#bodyModificarProducto  .form .inputfield label { 
 color: #757575;
 font-size: 14px;
 }
 
-#bodyModificarProducto .wrapper .form .inputfield .input { 
+#bodyModificarProducto  .form .inputfield .input { 
     width: 100%;
     border: 1px solid #d5d5d5;
     font-size: 15px;
@@ -209,12 +212,23 @@ font-size: 14px;
 }
 #bodyModificarProducto form{
     width: 100%;
+    padding: 3%;
+    padding-bottom: 2%;
 }
-#bodyModificarProducto form button{
-    width: 100%;
-    border: 2px solid #99DDCC;
-    background-color: white;
+#bodyModificarProducto main{
+  width: 60%;
+  margin: auto;
+  margin-top: 2%;
+  
 }
+#bodyModificarProducto main button{
+    width: 40%;
+    border: none;
+    background-color: #99DDCC;
+    color: white;
+    margin-top: 2%;
+}
+
 /*fin de estilos modificar producto*/
 /*estilos catalogo*/
 body#bodyCatalogo{
@@ -254,6 +268,8 @@ body#bodyCatalogo section.Productos{
   height: 100%;
 }
 #bodyCatalogo section article section.datos{/* Descripcion*/
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: 25%;
   text-align: center;
@@ -690,13 +706,15 @@ body#MenuAdmin div ul li{
     font-size: 225%;
   }
   body#bodyCatalogo section.Productos{
-    margin-top: 5%;
+    display: flex;
+    flex-direction: row;
     width: 100%;
     text-align: center;
     font-size: 125%;
+    margin: 1%;
   }
   body#bodyCatalogo section article{
-    width: 44%;
+    width: 42%;
     margin: 3%;
   }
  
@@ -720,6 +738,13 @@ body#MenuAdmin div ul li{
     width: 45%;
   }
 
+  #bodyUnProducto article{
+    
+    width: 60%;
+    margin: auto;
+  }
+ 
+
 }
 @media (min-width: 1280px){
   header{
@@ -730,9 +755,7 @@ body#MenuAdmin div ul li{
   }
   body#bodyCatalogo section article{
     width: 23%;
-    height: 48vh;
     margin: 1%;
-    margin-bottom: 5%;
   }
 
   footer{
@@ -751,6 +774,12 @@ body#MenuAdmin div ul li{
   #bodyHome main section.Ofertas article{
     width: 22%;
   }
+  #bodyUnProducto article{
+    width: 40%;
+    margin: auto;
+  }
+ 
+  
 }
 @keyframes cambio {
   0%{margin-left: 0%;}
