--- a/proyecto-Clopix/src/views/index.ejs
+++ b/proyecto-Clopix/src/views/index.ejs
@@ -17,15 +17,15 @@
                     <section class="Ofertas">
                         <article>
                             <div class="imagenProducto">
-                              <img src="/images/KyotoPastel-BomberJacketFront_180x.png" alt="" width="360">
+                              <img src="/images/KyotoPastel-BomberJacketFront_180x.png" alt="">
                             </div>
 
                                 
-                      <div class="nombre-precio"> 
+                            <div class="nombre-precio"> 
                                     <p class="nombreProducto-Precio">CHAQUETA BOMBER $4550 ARS </p>
-                                </div>
-                         <!--   <i class="fas fa-truck"></i> -->
                             </div>
+                         <!--   <i class="fas fa-truck"></i> -->
+                            
                         </article>
 
                         <article>
@@ -33,22 +33,22 @@
                                <img src="/images/7F_180x.png" alt="" >
                             </div>
 
-                              <div class="nombre-precio"> 
+                            <div class="nombre-precio"> 
                                     <p class="nombreProducto-Precio">VICE CAMISA HAWAIANA  $1500 ARS</p>
-                                </div>
-                             <!--   <i class="fas fa-truck"></i> -->
                             </div>
+                             <!--   <i class="fas fa-truck"></i> -->
+                            
                         </article>
                         <article>
                             <div class="imagenProducto">
                               <img src="/images/NewChallengerall_over_print_hoodieFRONT_180x.png" alt="">
                             </div>
 
-                               <div class="nombre-precio"> 
-                                    <p class="nombreProducto-Precio">SUDADERA NEW CHALLENGER $23990 ARS </p>
-                                </div>
-                              <!--<i class="fas fa-truck"></i>-->
+                            <div class="nombre-precio"> 
+                                <p class="nombreProducto-Precio">SUDADERA NEW CHALLENGER $23990 ARS </p>
                             </div>
+                              <!--<i class="fas fa-truck"></i>-->
+                           
                         </article>
                     </section>
             </main>
